Fix width of title columns that overflow when using swim lanes

--- a/JiraTweaks.user.css
+++ b/JiraTweaks.user.css
@@ -2,7 +2,7 @@
 @name           Jira Tweaks
 @description    Tweaks for Jira Software Cloud
 @author         NickLambellGCH
-@version        1.1.1
+@version        1.1.2
 @namespace      https://github.com/NickLambellGCH
 @homepageURL    https://github.com/NickLambellGCH/Jira-Tweaks
 @updateURL      https://github.com/NickLambellGCH/Jira-Tweaks/raw/main/JiraTweaks.user.css
@@ -20,7 +20,8 @@
         }
 
         div[data-testid="platform-board-kit.ui.column.draggable-column.styled-wrapper"],
-        & > section > div > div > div > div[draggable="true"] {
+        & > section > div > div > div > div[draggable="true"],
+        & > section > div > div > div > div[data-drop-target-for-element="true"] {
             min-width: @column-width;
         }
 
